Pull request #10: IHUBVB-377 сделать GigaChatStreamingChatModel
Merge in SPM/langchain4j-gigachat from feature/streaming-model to master

Squashed commit of the following:

commit 5048cb9007f1752e1ed05f7adb06267eabe85ed2
Author: Sergey Safonov <ssafonov@sber.ru>
Date:   Thu Apr 3 14:25:10 2025 +0300

    add token usage

commit c98f19b48b3d61f98bb23b94b05a8bc75ecb8e29
Author: Sergey Safonov <ssafonov@sber.ru>
Date:   Thu Apr 3 14:10:33 2025 +0300

    gigachat-java version 0.1.4

commit 3d77e06a08afe867f2d06a21061939053b33d3db
Author: Sergey Safonov <ssafonov@sber.ru>
Date:   Thu Apr 3 13:50:07 2025 +0300

    java 17 min

commit 97f3270ede68e4008bc1cddefb1cde2c23c0c163
Author: Sergey Safonov <ssafonov@sber.ru>
Date:   Thu Apr 3 10:19:10 2025 +0300

    IHUBVB-377 сделать GigaChatStreamingChatModel